@@ -52,14 +52,12 @@ unhandedOtherHelp = "This is a (so far) unhandeled variable type. If you read th
 arrayCountLimitHelp = "When encountering an array larger than this number, kreXX will resort to a simplified array analysis. This means that classes or other arrays in this large array will only get a rudimentary analysis to prevent an overkill output."
 
 localFunction = "Here you can enter your own alias function for \krexx::open().<br/> Example: When you enter &apos;gue&apos;, the function will be \krexx::gue($myObject); [or krexx($myObject, &apos;gue&apos;);],<br/> which only devs can use who have set the same value.This is useful, to prevent other devs from calling your debug functions."
-devHandle = "Locel open function"
 kresetbutton = "Here you can reset your local settings, which are stored in a cookie.<br/> kreXX will then use the global settings (either ini-file or factory settings)."
 currentSettings = "kreXX&apos;s configuration can be edited here, changes will be stored in a cookie and overwrite the ini and factory settings.<br/> <strong>Please note, that these are only local settings. They only affect this browser.</strong>"
 configErrorBool = "Wrong configuration for: '%s => %s'! Expected boolean. The configured setting was not applied!"
 configErrorInt = "Wrong configuration for: '%s => %s'! Expected integer. The configured setting was not applied!"
 configErrorDestination = "Wrong configuration for: 'output => destination'! Expected 'browser' or 'file'. The configured setting was not applied!"
 configErrorSkin = "Wrong configuration for: 'output => skin'! Skin not found. The configured setting was not applied!"
-configErrorDevHandle = "You have entered a wrong developer handle. Please use only letters between a-z and A-Z."
 configErrorLocal = "Could not read the Local Cookie configuration. Sorry :-/"
 configErrorIprange = "Wrong configuration for: 'output => iprange'! An empty IP list means that no one will be able to use kreXX. The configured setting was not applied!"
 configErrorMaxRuntimeBig = "Wrong configuration for: 'runtime => maxRuntime'! Maximum for this server is: %s The configured setting was not applied!"
