@@ -7,6 +7,7 @@
 - Added return type to the method and function analysis.
 - Added additional data to the constants analysis for PHP 7.1
   and higher. The scope analysis now respects their visibility.
+- Added logging shothand "krexxlog();".
 - Change: Removed all deprecations.
 - Change: Removed the PHP 5.x fatal error handler.
 - Change: Dropped PHP 5.x support.
@@ -29,6 +30,7 @@
 - Change: Refactored the routing.
 - Change: "Called from" is always expanded in the smokygrey skin.
 - Change: The connector constants are now strings.
+- Change: Removed the "local opening function" aka. devHandle.
 - Bugfix: The search does now respects the selected tab.
 - Bugfix: Added missing meta data to a handled exception.
 - Bugfix: Prevent an open <pre> from messing with the output.
